--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -7,38 +7,38 @@ env:
 
 steps:
 
-  # - trigger: "mac-anka-fleet"
-  #   label: ":anka: Ensure Mojave Anka Template Tag Exists"
-  #   branches: "*"
-  #   async: false
-  #   build:
-  #     branch: "master"
-  #     env:
-  #       REPO: "${BUILDKITE_REPO}"
-  #       REPO_BRANCH: "${BUILDKITE_BRANCH}"
-  #       CHECKSUMABLE: "${CHECKSUMABLE}"
-  #       TEMPLATE: "${ANKA_MOJAVE_TEMPLATE}"
-  #       TEMPLATE_TAG: "${ANKA_TEMPLATE_TAG}"
-  #       TAG_COMMANDS: "CLONED_REPO_DIR/scripts/eosio_build.sh -y -P -f" # CLONED_REPO_DIR IS REQUIRED and is where the repo is always cloned into
-  #       PROJECT_TAG: "${MAC_TAG}"
+  - trigger: "mac-anka-fleet"
+    label: ":anka: Ensure Mojave Anka Template Tag Exists"
+    branches: "*"
+    async: false
+    build:
+      branch: "master"
+      env:
+        REPO: "${BUILDKITE_REPO}"
+        REPO_BRANCH: "${BUILDKITE_BRANCH}"
+        CHECKSUMABLE: "${CHECKSUMABLE}"
+        TEMPLATE: "${ANKA_MOJAVE_TEMPLATE}"
+        TEMPLATE_TAG: "${ANKA_TEMPLATE_TAG}"
+        TAG_COMMANDS: "CLONED_REPO_DIR/scripts/eosio_build.sh -y -P -f" # CLONED_REPO_DIR IS REQUIRED and is where the repo is always cloned into
+        PROJECT_TAG: "${MAC_TAG}"
 
-  # - wait
+  - wait
 
-  # - label: ":darwin: [Darwin] Mojave Build"
-  #   command:
-  #     - "./scripts/eosio_build.sh -y -P"
-  #     - "tar -pczf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz build"
-  #   plugins:
-  #     chef/anka#v0.4.3:
-  #       vm-name: $ANKA_MOJAVE_TEMPLATE
-  #       vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
-  #       workdir: $ANKA_WORKDIR
-  #       always-pull: true
-  #       debug: true
-  #       wait-network: true
-  #   agents:
-  #     - "queue=mac-anka-node-fleet"
-  #   timeout: 120
+  - label: ":darwin: [Darwin] Mojave Build"
+    command:
+      - "./scripts/eosio_build.sh -y -P"
+      - "tar -pczf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz build"
+    plugins:
+      chef/anka#v0.4.3:
+        vm-name: $ANKA_MOJAVE_TEMPLATE
+        vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
+        workdir: $ANKA_WORKDIR
+        always-pull: true
+        debug: true
+        wait-network: true
+    agents:
+      - "queue=mac-anka-node-fleet"
+    timeout: 120
 
 
   # - command: | # macOS Mojave Build
@@ -150,7 +150,7 @@ steps:
   #       workdir: /data/job
   #   timeout: 120
 
-  # - wait
+  - wait
 
   # # Amazon Linux 2 Tests
   # - command: |
@@ -327,7 +327,8 @@ steps:
 
   - label: ":darwin: [Darwin] Mojave Tests"
     command:
-      - "tar -xzf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/10.14.4_6C_14G_40G-eosio-9ae4305b-7694-4698-a5b0-81e0b9f9d17a.tar.gz"
+      - "tar -xzf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
+      - "cat build/CMakeCache.txt"
       - "cd build && ctest -j $(getconf _NPROCESSORS_ONLN) -LE _tests --output-on-failure -T Test"
       - "cd build && mv $(pwd)/Testing/$(ls $(pwd)/Testing/ | grep '20' | tail -n 1)/Test.xml test-results.xml"
     artifact_paths:
@@ -350,9 +351,9 @@ steps:
 
   - label: ":darwin: [Darwin] Mojave Tests"
     command:
-      - "tar -xzf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/10.14.4_6C_14G_40G-eosio-9ae4305b-7694-4698-a5b0-81e0b9f9d17a.tar.gz"
-      - "cd /data/job/build && ctest -L nonparallelizable_tests --output-on-failure -T Test < /dev/null"
-      - "cd /data/job/build && mv $(pwd)/Testing/$(ls $(pwd)/Testing/ | grep '20' | tail -n 1)/Test.xml test-results.xml"
+      - "tar -xzf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
+      - "cd build && ctest -L nonparallelizable_tests --output-on-failure -T Test"
+      - "cd build && mv $(pwd)/Testing/$(ls $(pwd)/Testing/ | grep '20' | tail -n 1)/Test.xml test-results.xml"
     artifact_paths:
       - "build/mongod.log"
       - "build/genesis.json"
