add NO_DEFAULT_PATH to mongo find_libraries to ensure we don't mistakingly pick up a static library from elsewhere

--- a/plugins/mongo_db_plugin/CMakeLists.txt
+++ b/plugins/mongo_db_plugin/CMakeLists.txt
@@ -5,20 +5,9 @@ if(BUILD_MONGO_DB_PLUGIN)
   if (libmongoc-1.0_FOUND)
 
       find_package(libbsoncxx-static REQUIRED)
-      find_library(EOS_LIBBSONCXX "libbsoncxx-static${CMAKE_STATIC_LIBRARY_SUFFIX}" PATHS ${LIBBSONCXX_STATIC_LIBRARY_DIRS})
-
       find_package(libmongocxx-static REQUIRED)
-      find_library(EOS_LIBMONGOCXX "libmongocxx-static${CMAKE_STATIC_LIBRARY_SUFFIX}" PATHS ${LIBMONGOCXX_STATIC_LIBRARY_DIRS})
-
       find_package(libmongoc-static-1.0 REQUIRED)
-      find_library(EOS_LIBMONGOC "libmongoc-static-1.0${CMAKE_STATIC_LIBRARY_SUFFIX}" PATHS ${LIBMONGOC_STATIC_LIBRARY_DIRS})
-
       find_package(libbson-static-1.0 REQUIRED)
-      find_library(EOS_LIBBSONC "libbson-static-1.0${CMAKE_STATIC_LIBRARY_SUFFIX}" PATHS ${LIBBSON_STATIC_LIBRARY_DIRS})
-
-      if(NOT EOS_LIBBSONCXX OR NOT EOS_LIBMONGOCXX OR NOT EOS_LIBMONGOC OR NOT EOS_LIBBSONC)
-          message(FATAL_ERROR "Could not find one or more mongo driver static libraries")
-      endif()
 
   else()
       message("Could NOT find MongoDB. mongo_db_plugin with MongoDB support will not be included.")
@@ -42,7 +31,9 @@ if(BUILD_MONGO_DB_PLUGIN)
 
   target_link_libraries(mongo_db_plugin
           PUBLIC chain_plugin eosio_chain appbase
-          ${EOS_LIBMONGOCXX} ${EOS_LIBBSONCXX} ${EOS_LIBMONGOC} ${EOS_LIBBSONC} resolv
+          ${LIBMONGOCXX_STATIC_LIBRARY_PATH} ${LIBBSONCXX_STATIC_LIBRARY_PATH}
+          ${MONGOC_STATIC_LIBRARY} ${BSON_STATIC_LIBRARY}
+          resolv
           )
                
 else()
