fixes for tests

--- a/scripts/.environment
+++ b/scripts/.environment
@@ -30,6 +30,8 @@ export MONGO_C_DRIVER_VERSION=1.13.0
 export MONGO_C_DRIVER_ROOT=${SRC_LOCATION}/mongo-c-driver-${MONGO_C_DRIVER_VERSION}
 export MONGO_CXX_DRIVER_VERSION=3.4.0
 export MONGO_CXX_DRIVER_ROOT=${SRC_LOCATION}/mongo-cxx-driver-r${MONGO_CXX_DRIVER_VERSION}
+export ENABLE_MONGO=${ENABLE_MONGO:-false}
+export INSTALL_MONGO=${INSTALL_MONGO:-false}
 
 # BOOST
 export BOOST_VERSION_MAJOR=1
@@ -47,6 +49,7 @@ export LLVM_DIR=${LLVM_ROOT}/lib/cmake/llvm
 # DOXYGEN
 export DOXYGEN_VERSION=1_8_14
 export DOXYGEN_ROOT=${SRC_LOCATION}/doxygen-${DOXYGEN_VERSION}
+export ENABLE_DOXYGEN=${ENABLE_DOXYGEN:-false}
 
 # CLANG
 export CLANG_ROOT=${OPT_LOCATION}/clang8
@@ -60,24 +63,27 @@ export PINNED_COMPILER_LIBCXX_COMMIT=1853712
 export PINNED_COMPILER_LIBCXXABI_COMMIT=d7338a4
 export PINNED_COMPILER_LIBUNWIND_COMMIT=57f6739
 export PINNED_COMPILER_COMPILER_RT_COMMIT=5bc7979
-export BUILD_CLANG=${BUILD_CLANG:-false}
+export NO_CCP17=${NO_CCP17:-false}
 export PIN_COMPILER=${PIN_COMPILER:-false}
+export BUILD_CLANG=${BUILD_CLANG:-false}
+
+export CORE_SYMBOL_NAME=${CORE_SYMBOL_NAME:-SYS}
 
 export CPU_CORES=$(grep -c ^processor /proc/cpuinfo 2>/dev/null || sysctl -n hw.ncpu)
 export CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE:-Release}
-export ENABLE_DOXYGEN=${DOXYGEN:-false}
-export ENABLE_MONGO=${ENABLE_MONGO:-false}
-export ENABLE_COVERAGE_TESTING=${ENABLE_COVERAGE_TESTING:-false}
-export CORE_SYMBOL_NAME=${CORE_SYMBOL_NAME:-SYS}
+
 export NONINTERACTIVE=${NONINTERACTIVE:-false}
 export PROCEED=${PROCEED:-false}
+
+export ENABLE_COVERAGE_TESTING=${ENABLE_COVERAGE_TESTING:-false}
 export HOMEBREW_NO_AUTO_UPDATE=1
-export MONGO_ENABLED=${MONGO_ENABLED:-true}
 export TINI_VERSION=0.18.0
 export DISK_MIN=5
 export COUNT=1
 
-SCRIPT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
-REPO_ROOT="${SCRIPT_DIR}/.."
-BUILD_DIR="${REPO_ROOT}/build"
+export SCRIPT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
+export REPO_ROOT="${SCRIPT_DIR}/.."
+export BUILD_DIR="${REPO_ROOT}/build"
+
+export TEMP_DIR=${TEMP_DIR:-$HOME/tmp}
 
