starting ubuntu testing

--- a/scripts/.environment
+++ b/scripts/.environment
@@ -64,9 +64,12 @@ export PINNED_COMPILER_LIBCXX_COMMIT=1853712
 export PINNED_COMPILER_LIBCXXABI_COMMIT=d7338a4
 export PINNED_COMPILER_LIBUNWIND_COMMIT=57f6739
 export PINNED_COMPILER_COMPILER_RT_COMMIT=5bc7979
-export NO_CCP17=${NO_CCP17:-false}
+export NO_CPP17=${NO_CPP17:-false}
 export PIN_COMPILER=${PIN_COMPILER:-false}
 export BUILD_CLANG=${BUILD_CLANG:-false}
+
+# ZLIB
+export ZLIB_VERSION=1.2.11
 
 export CORE_SYMBOL_NAME=${CORE_SYMBOL_NAME:-SYS}
 
