--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,9 +1,9 @@
 FROM ubuntu:18.04
 
-ENV HTTP_PROXY=http://proxy.service:3128
-ENV HTTPS_PROXY=http://proxy.service:3128
-ENV http_proxy=http://proxy.service:3128
-ENV https_proxy=http://proxy.service:3128
+# ENV HTTP_PROXY=http://proxy.service:3128
+# ENV HTTPS_PROXY=http://proxy.service:3128
+# ENV http_proxy=http://proxy.service:3128
+# ENV https_proxy=http://proxy.service:3128
 
 RUN apt-get update && apt-get install -y curl
 
