--- a/plugins/wallet_plugin/CMakeLists.txt
+++ b/plugins/wallet_plugin/CMakeLists.txt
@@ -20,9 +20,10 @@ add_library( wallet_plugin
              wallet_manager.cpp
              ${SE_WALLET_SOURCES}
              yubihsm_wallet.cpp
+             webauthn_wallet.cpp
              ${HEADERS} )
 
-target_link_libraries( wallet_plugin yubihsm_static eosio_chain appbase ${security_framework} ${corefoundation_framework} ${localauthentication_framework} ${cocoa_framework})
+target_link_libraries( wallet_plugin yubihsm_static eosio_chain appbase microfido ${security_framework} ${corefoundation_framework} ${localauthentication_framework} ${cocoa_framework})
 target_include_directories( wallet_plugin PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
 
 #sadly old cmake 2.8 support in yubihsm cmake prevents usage of target_include_directories there
