Added eosio-build-unpinned pipeline

--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -1,4 +1,8 @@
 {
+    "eosio-build-unpinned":
+    {
+        "pipeline-branch": "protocol-features-sync-nodes"
+    },
     "eos-multiversion-tests":
     {
         "pipeline-branch": "protocol-features-sync-nodes",
