--- a/plugins/state_history_plugin/CMakeLists.txt
+++ b/plugins/state_history_plugin/CMakeLists.txt
@@ -4,6 +4,6 @@ add_library( state_history_plugin
              state_history_plugin_abi.cpp
              ${HEADERS} )
 
-target_link_libraries( state_history_plugin chain_plugin eosio_chain appbase )
+target_link_libraries( state_history_plugin chain_provider_plugin eosio_chain appbase )
 target_include_directories( state_history_plugin PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include"
                             "${CMAKE_CURRENT_SOURCE_DIR}/../chain_interface/include" )
