--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -306,6 +306,17 @@ steps:
       - "os=mojave"
     timeout: 60
 
+  - wait:
+    continue_on_failure: true
+
+  - command: |
+        cd scripts/metrics
+        node --max-old-space-size=4096 test-metrics.js
+    label: ":bar_chart: Test Metrics"
+    agents:
+      queue: "automation-apps-builder-fleet"
+    timeout: 10
+
   - wait
 
   - command: | # CentOS 7 Package Builder
