close to ready for replay

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -14,7 +14,11 @@ set(RUN_RE2C OFF CACHE BOOL "Run re2c")
 set(WITH_EXCEPTIONS ON CACHE BOOL "Build with exceptions enabled" FORCE)
 add_subdirectory( wabt )
 
-set(USE_EXISTING_SOFTFLOAT 1)
+set(USE_EXISTING_SOFTFLOAT ON)
+set(ENABLE_TESTS OFF)
+set(ENABLE_ADDRESS_SANITIZER OFF)
+set(ENABLE_UNDEFINED_BEHAVIOR_SANITIZER OFF)
+set(ENABLE_PROFILE OFF)
 add_subdirectory( eos-vm )
 
 set(ENABLE_STATIC ON)
