Added eosio-nightly-builds pipeline to pipeline.jsonc

--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -2,5 +2,9 @@
     "eosio-lrt":
     {
         "pipeline-branch": "legacy-os"
+    },
+    "eosio-nightly-builds":
+    {
+        "pipeline-branch": "legacy-os"
     }
 }
