--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,28 +1,55 @@
+env:
+  ANKA_MOJAVE_TEMPLATE: "10.14.4_6C_14G_40G"
+  ANKA_TEMPLATE_TAG: "clean::cicd::git-ssh::nas::brew::buildkite-agent-3.11.2"
+  CHECKSUMABLE: "scripts/eosio_build*"
+  MAC_TAG: "eosio_2-3"
+
 steps:
-  - command: | # macOS Mojave Build
-      echo "--- Creating symbolic link to job directory :file_folder:"
-      sleep 5
-      ln -s "$(pwd)" /data/job
-      cd /data/job
-      echo "+++ Building :hammer:"
-      ./scripts/eosio_build.sh -y -P -m
-      echo "--- Compressing build directory :compression:"
-      tar -pczf build.tar.gz build
-      if [[ ! -f build.tar.gz ]]; then echo 'ERROR: No build.tar.gz artifact found!' && exit 1; fi
-    label: ":darwin: Mojave Build"
+
+  - trigger: "mac-anka-fleet"
+    label: ":anka: Ensure Mojave Anka Template Tag Exists"
+    branches: "*"
+    async: false
+    build:
+      branch: "master"
+      env:
+        REPO: "${BUILDKITE_REPO}"
+        REPO_BRANCH: "${BUILDKITE_BRANCH}"
+        CHECKSUMABLE: "${CHECKSUMABLE}"
+        TEMPLATE: "${ANKA_MOJAVE_TEMPLATE}"
+        TEMPLATE_TAG: "${ANKA_TEMPLATE_TAG}"
+        TAG_COMMANDS: "CLONED_REPO_DIR/scripts/eosio_build.sh -y -P -m" # CLONED_REPO_DIR IS REQUIRED and is where the repo is always cloned into
+        PROJECT_TAG: "${MAC_TAG}"
+
+  - wait
+
+  ############################
+  # BUILDING #################
+  ############################
+
+  - label: ":darwin: [Darwin] Mojave Build"
+    command:
+      - "git clone git@github.com:EOSIO/eos.git -b ${BUILDKITE_BRANCH} eos && cd eos && git submodule update --init --recursive && ./scripts/eosio_build.sh -y -P -m"
+      - "tar -pczf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz eos"
+    plugins:
+      chef/anka#v0.4.4:
+        no-volume: true
+        inherit-environment-vars: true
+        vm-name: $ANKA_MOJAVE_TEMPLATE
+        vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
+        modify-cpu: 12
+        modify-ram: 24
+        always-pull: true
+        debug: true
+        wait-network: true
     agents:
-      - "role=builder-v2-2"
-      - "os=mojave"
-    artifact_paths: "build.tar.gz"
+      - "queue=mac-anka-large-node-fleet"
     timeout: 120
 
-  - command: | # Amazon Linux 2 Build
-        echo "+++ :hammer: Building"
-        ./scripts/eosio_build.sh -y -P -m
-        echo "--- :compression: Compressing build directory"
-        tar -pczf build.tar.gz build
-        if [[ ! -f build.tar.gz ]]; then echo 'ERROR: No build.tar.gz artifact found!' && exit 1; fi
-    label: ":aws: Amazon Linux 2 Build"
+  - label: ":aws: Amazon Linux 2 Build"
+    command:
+      - "./scripts/eosio_build.sh -y -P -m"
+      - "tar -pczf build.tar.gz build; if [[ ! -f build.tar.gz ]]; then echo 'ERROR: No build.tar.gz artifact found!' && exit 1; fi"
     agents:
       queue: "automation-large-builder-fleet"
     artifact_paths: "build.tar.gz"
@@ -39,13 +66,10 @@ steps:
         workdir: /data/job
     timeout: 120
 
-  - command: | # CentOS 7 Build
-        echo "+++ :hammer: Building"
-        ./scripts/eosio_build.sh -y -P -m
-        echo "--- :compression: Compressing build directory"
-        tar -pczf build.tar.gz build
-        if [[ ! -f build.tar.gz ]]; then echo 'ERROR: No build.tar.gz artifact found!' && exit 1; fi
-    label: ":centos: CentOS 7 Build"
+  - label: ":centos: CentOS 7 Build"
+    command:
+        - "./scripts/eosio_build.sh -y -P -m"
+        - "tar -pczf build.tar.gz build; if [[ ! -f build.tar.gz ]]; then echo 'ERROR: No build.tar.gz artifact found!' && exit 1; fi"
     agents:
       queue: "automation-large-builder-fleet"
     artifact_paths: "build.tar.gz"
@@ -62,12 +86,10 @@ steps:
         workdir: /data/job
     timeout: 120
 
-  - command: | # Ubuntu 16.04 Build
-        echo "+++ :hammer: Building"
-        ./scripts/eosio_build.sh -y -P -m
-        echo "--- :compression: Compressing build directory"
-        tar -pczf build.tar.gz build
-        if [[ ! -f build.tar.gz ]]; then echo 'ERROR: No build.tar.gz artifact found!' && exit 1; fi
+  - label: ":ubuntu: Ubuntu 16.04 Build"
+    command:
+      - "./scripts/eosio_build.sh -y -P -m"
+      - "tar -pczf build.tar.gz build; if [[ ! -f build.tar.gz ]]; then echo 'ERROR: No build.tar.gz artifact found!' && exit 1; fi"
     label: ":ubuntu: Ubuntu 16.04 Build"
     agents:
       queue: "automation-large-builder-fleet"
@@ -85,13 +107,10 @@ steps:
         workdir: /data/job
     timeout: 120
 
-  - command: | # Ubuntu 18.04 Build
-        echo "+++ :hammer: Building"
-        ./scripts/eosio_build.sh -y -P -m
-        echo "--- :compression: Compressing build directory"
-        tar -pczf build.tar.gz build
-        if [[ ! -f build.tar.gz ]]; then echo 'ERROR: No build.tar.gz artifact found!' && exit 1; fi
-    label: ":ubuntu: Ubuntu 18.04 Build"
+  - label: ":ubuntu: Ubuntu 18.04 Build"
+    command:
+      - "./scripts/eosio_build.sh -y -P -m"
+      - "tar -pczf build.tar.gz build; if [[ ! -f build.tar.gz ]]; then echo 'ERROR: No build.tar.gz artifact found!' && exit 1; fi"
     agents:
       queue: "automation-large-builder-fleet"
     artifact_paths: "build.tar.gz"
@@ -110,13 +129,52 @@ steps:
 
   - wait
 
-  # Amazon Linux 2 Tests
-  - command: |
-        echo "--- :arrow_down: Downloading Build Directory"
-        buildkite-agent artifact download "build.tar.gz" . --step ":aws: Amazon Linux 2 Build"
-        echo "+++ :microscope: Running Tests"
-        ./scripts/parallel-test.sh
-    label: ":aws: Amazon Linux 2 Tests"
+  ################################
+  # TESTS ########################
+  ################################
+
+  # MOJAVE #
+  - label: ":darwin: [Darwin] Mojave Tests"
+    command:
+      - "tar -xzf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
+      - "cd eos && ./scripts/parallel-test.sh"
+    agents:
+      - "queue=mac-anka-node-fleet"
+    plugins:
+      chef/anka#v0.4.4:
+        no-volume: true
+        inherit-environment-vars: true
+        bash-interactive: true
+        vm-name: $ANKA_MOJAVE_TEMPLATE
+        vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
+        always-pull: true
+        debug: true
+        wait-network: true
+    timeout: 120
+
+  - label: ":darwin: [Darwin] Mojave NP Tests"
+    command:
+      - "tar -xzf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
+      - "cd eos && ./scripts/serial-test.sh"
+    agents:
+      - "queue=mac-anka-node-fleet"
+    plugins:
+      chef/anka#v0.4.4:
+        no-volume: true
+        inherit-environment-vars: true
+        bash-interactive: true
+        vm-name: $ANKA_MOJAVE_TEMPLATE
+        vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
+        always-pull: true
+        debug: true
+        wait-network: true
+    timeout: 120
+
+  # AmazonLinux #
+  - label: ":aws: Amazon Linux 2 Tests"
+    command:
+      - "buildkite-agent artifact download \"build.tar.gz\" . --step \":aws: Amazon Linux 2 Build\""
+      - "./scripts/parallel-test.sh"
     agents:
       queue: "automation-large-builder-fleet"
     plugins:
@@ -132,11 +190,10 @@ steps:
         workdir: /data/job
     timeout: 60
 
-  - command: |
-        echo "--- :arrow_down: Downloading Build Directory"
-        buildkite-agent artifact download "build.tar.gz" . --step ":aws: Amazon Linux 2 Build"
-        echo "+++ :microscope: Running Tests"
-        ./scripts/serial-test.sh
+  - label: ":aws: Amazon Linux 2 NP Tests"
+    command:
+      - "buildkite-agent artifact download \"build.tar.gz\" . --step \":aws: Amazon Linux 2 Build\""
+      - "./scripts/serial-test.sh"
     label: ":aws: Amazon Linux 2 NP Tests"
     agents:
       queue: "automation-large-builder-fleet"
@@ -153,13 +210,11 @@ steps:
         workdir: /data/job
     timeout: 60
 
-  # centOS 7 Tests
-  - command: |
-        echo "--- :arrow_down: Downloading Build Directory"
-        buildkite-agent artifact download "build.tar.gz" . --step ":centos: CentOS 7 Build"
-        echo "+++ :microscope: Running Tests"
-        ./scripts/parallel-test.sh
-    label: ":centos: CentOS 7 Tests"
+  # CentOS #
+  - label: ":centos: CentOS 7 Tests"
+    command:
+      - "buildkite-agent artifact download \"build.tar.gz\" . --step \":centos: CentOS 7 Build\""
+      - "./scripts/parallel-test.sh"
     agents:
       queue: "automation-large-builder-fleet"
     plugins:
@@ -175,12 +230,10 @@ steps:
         workdir: /data/job
     timeout: 60
 
-  - command: |
-        echo "--- :arrow_down: Downloading Build Directory"
-        buildkite-agent artifact download "build.tar.gz" . --step ":centos: CentOS 7 Build"
-        echo "+++ :microscope: Running Tests"
-        ./scripts/serial-test.sh
-    label: ":centos: CentOS 7 NP Tests"
+  - label: ":centos: CentOS 7 NP Tests"
+    command:
+      - "buildkite-agent artifact download \"build.tar.gz\" . --step \":centos: CentOS 7 Build\""
+      - "./scripts/serial-test.sh"
     agents:
       queue: "automation-large-builder-fleet"
     plugins:
@@ -196,13 +249,11 @@ steps:
         workdir: /data/job
     timeout: 60
 
-  # Ubuntu 16.04 Tests
-  - command: |
-        echo "--- :arrow_down: Downloading Build Directory"
-        buildkite-agent artifact download "build.tar.gz" . --step ":ubuntu: Ubuntu 16.04 Build"
-        echo "+++ :microscope: Running Tests"
-        ./scripts/parallel-test.sh
-    label: ":ubuntu: Ubuntu 16.04 Tests"
+  # Ubuntu #
+  - label: ":ubuntu: Ubuntu 16.04 Tests"
+    command:
+      - "buildkite-agent artifact download \"build.tar.gz\" . --step \":ubuntu: Ubuntu 16.04 Build\""
+      - "./scripts/parallel-test.sh"
     agents:
       queue: "automation-large-builder-fleet"
     plugins:
@@ -218,12 +269,10 @@ steps:
         workdir: /data/job
     timeout: 60
 
-  - command: |
-        echo "--- :arrow_down: Downloading Build Directory"
-        buildkite-agent artifact download "build.tar.gz" . --step ":ubuntu: Ubuntu 16.04 Build"
-        echo "+++ :microscope: Running Tests"
-        ./scripts/serial-test.sh
-    label: ":ubuntu: Ubuntu 16.04 NP Tests"
+  - label: ":ubuntu: Ubuntu 16.04 NP Tests"
+    command:
+      - "buildkite-agent artifact download \"build.tar.gz\" . --step \":ubuntu: Ubuntu 16.04 Build\""
+      - "./scripts/serial-test.sh"
     agents:
       queue: "automation-large-builder-fleet"
     plugins:
@@ -239,13 +288,10 @@ steps:
         workdir: /data/job
     timeout: 60
 
-  # Ubuntu 18.04 Tests
-  - command: |
-        echo "--- :arrow_down: Downloading Build Directory"
-        buildkite-agent artifact download "build.tar.gz" . --step ":ubuntu: Ubuntu 18.04 Build"
-        echo "+++ :microscope: Running Tests"
-        ./scripts/parallel-test.sh
-    label: ":ubuntu: Ubuntu 18.04 Tests"
+  - label: ":ubuntu: Ubuntu 18.04 Tests"
+    command:
+      - "buildkite-agent artifact download \"build.tar.gz\" . --step \":ubuntu: Ubuntu 18.04 Build\""
+      - "./scripts/parallel-test.sh"
     agents:
       queue: "automation-large-builder-fleet"
     plugins:
@@ -261,12 +307,10 @@ steps:
         workdir: /data/job
     timeout: 60
 
-  - command: |
-        echo "--- :arrow_down: Downloading Build Directory"
-        buildkite-agent artifact download "build.tar.gz" . --step ":ubuntu: Ubuntu 18.04 Build"
-        echo "+++ :microscope: Running Tests"
-        ./scripts/serial-test.sh
-    label: ":ubuntu: Ubuntu 18.04 NP Tests"
+  - label: ":ubuntu: Ubuntu 18.04 NP Tests"
+    command:
+      - "buildkite-agent artifact download \"build.tar.gz\" . --step \":ubuntu: Ubuntu 18.04 Build\""
+      - "./scripts/serial-test.sh"
     agents:
       queue: "automation-large-builder-fleet"
     plugins:
@@ -280,30 +324,6 @@ steps:
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu18_2-2"
         propagate-environment: true
         workdir: /data/job
-    timeout: 60
-
-  # Mojave Tests
-  - command: |
-        echo "--- :arrow_down: Downloading Build Directory"
-        buildkite-agent artifact download "build.tar.gz" . --step ":darwin: Mojave Build"
-        echo "+++ :microscope: Running Tests"
-        ln -s "$(pwd)" /data/job
-        ./scripts/parallel-test.sh
-    label: ":darwin: Mojave Tests"
-    agents:
-      - "role=tester-v2-2"
-      - "os=mojave"
-    timeout: 60
-  - command: |
-        echo "--- :arrow_down: Downloading Build Directory"
-        buildkite-agent artifact download "build.tar.gz" . --step ":darwin: Mojave Build"
-        echo "+++ :microscope: Running Tests"
-        ln -s "$(pwd)" /data/job
-        ./scripts/serial-test.sh
-    label: ":darwin: Mojave NP Tests"
-    agents:
-      - "role=tester-v2-1"
-      - "os=mojave"
     timeout: 60
 
   - wait:
@@ -320,7 +340,8 @@ steps:
 
   - wait
 
-  - command: | # CentOS 7 Package Builder
+  - label: ":centos: CentOS 7 Package Builder"
+    command: |
         echo "--- :arrow_down: Downloading build directory"
         buildkite-agent artifact download "build.tar.gz" . --step ":centos: CentOS 7 Build"
         tar -zxf build.tar.gz
@@ -334,7 +355,6 @@ steps:
         mkdir -p /root/rpmbuild/SRPMS
         cd /data/job/build/packages
         bash generate_package.sh rpm
-    label: ":centos: CentOS 7 Package Builder"
     agents:
       queue: "automation-large-builder-fleet"
     artifact_paths:
@@ -411,22 +431,25 @@ steps:
       PKGTYPE: "deb"
     timeout: 60
 
-  - command: | # macOS Mojave Package Builder
-        echo "--- :arrow_down: Downloading build directory"
-        buildkite-agent artifact download "build.tar.gz" . --step ":darwin: Mojave Build"
-        tar -zxf build.tar.gz
-        echo "+++ :microscope: Starting package build"
-        ln -s "$(pwd)" /data/job
-        cd /data/job/build/packages
-        bash generate_package.sh brew
-    label: ":darwin: Mojave Package Builder"
+  - label: ":darwin: Mojave Package Builder"
+    command:
+      - "tar -xzf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
+      - "cd eos/build/packages && bash generate_package.sh brew"
+      - "cd eos && buildkite-agent artifact upload build/packages/*.tar.gz"
+      - "cd eos && buildkite-agent artifact upload build/packages/*.rb"
     agents:
-      - "role=builder-v2-2"
-      - "os=mojave"
-    artifact_paths:
-      - "build/packages/*.tar.gz"
-      - "build/packages/*.rb"
-    timeout: 60
+      - "queue=mac-anka-node-fleet"
+    plugins:
+      chef/anka#v0.4.4:
+        no-volume: true
+        inherit-environment-vars: true
+        bash-interactive: true
+        vm-name: $ANKA_MOJAVE_TEMPLATE
+        vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
+        always-pull: true
+        debug: true
+        wait-network: true
+    timeout: 120
 
   - wait
 
@@ -439,7 +462,6 @@ steps:
     artifact_paths:
       - "build/packages/eosio.rb"
     timeout: 5
-
   - command: | # Git Submodule Regression Check
         echo "+++ :microscope: Running git submodule regression check" && \
         ./scripts/submodule_check.sh
@@ -447,3 +469,4 @@ steps:
     agents:
       queue: "automation-large-builder-fleet"
     timeout: 5
+
