Added blockLogUtil to bin. GH #7253.

--- a/programs/eosio-blocklog/CMakeLists.txt
+++ b/programs/eosio-blocklog/CMakeLists.txt
@@ -16,6 +16,7 @@ target_link_libraries( eosio-blocklog
         PRIVATE appbase
         PRIVATE eosio_chain fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
 
+copy_bin( eosio-blocklog )
 install( TARGETS
    eosio-blocklog
 
