set variable for docker pipeline

--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -15,6 +15,13 @@
             "170=v1.7.0"
         ]
     },
+    "eosio-docker-builds":
+    {
+        "environment":
+        {
+            "BUILDER_TAG": "v1.8.0"
+        }
+    },
     "eosio-sync-tests":
     {
         "pipeline-branch": "protocol-features-sync-nodes"
