update pipeline definition file for triggered builds

--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -15,8 +15,19 @@
             "170=v1.7.0"
         ]
     },
+    "eosio-docker-builds":
+    {
+        "environment":
+        {
+            "BUILDER_TAG": "v1.8.0"
+        }
+    },
     "eosio-sync-tests":
     {
-        "pipeline-branch": "protocol-features-sync-nodes"
+        "environment":
+        {
+            "SKIP_PRE_V180": "true",
+            "SKIP_V180": "false"
+        }
     }
 }
