--- a/Docker/docker-compose-events.yml
+++ b/Docker/docker-compose-events.yml
@@ -74,7 +74,7 @@ services:
     depends_on:
       mongo:
         condition: service_healthy
-    command: bash -c "mkfifo /queue/msg.pipe; exec /opt/cyberway/bin/nodeosd.sh --data-dir /opt/cyberway/bin/data-dir -e --http-alias=nodeosd:8888 --http-alias=127.0.0.1:8888 --http-alias=localhost:8888 --plugin eosio::event_engine_plugin --event-engine-dumpfile /queue/msg.pipe --genesis-json /opt/cyberway/bin/genesis-data/genesis.json --genesis-data /opt/cyberway/bin/genesis-data/genesis.dat"
+    command: bash -c "mkfifo /queue/msg.pipe; exec /opt/cyberway/bin/nodeosd.sh --data-dir /opt/cyberway/bin/data-dir -e --http-alias=nodeosd:8888 --http-alias=127.0.0.1:8888 --http-alias=localhost:8888 --plugin eosio::event_engine_plugin --event-engine-dumpfile /queue/msg.pipe --genesis-json /opt/cyberway/bin/genesis-data/genesis.json --genesis-data /opt/cyberway/bin/genesis-data/genesis.dat ${EXTRA_NODEOS_ARGS}"
     hostname: nodeosd
     ports:
       - 8888:8888
